get all user , get all skill

--- a/admin/client/src/app/skill/skill.component.html
+++ b/admin/client/src/app/skill/skill.component.html
@@ -15,12 +15,12 @@
             </div>
             <div class="col-md-6">
               <div class="row">
-                <div class="col-md-6">
-                  <button md-button class="btn-add">Add Skill</button>
+                <div class="col-md-12">
+                  <button md-button class="btn-add" (click)="openDialog()">Thêm Kỹ Năng</button>
                 </div>
-                <div class="col-md-6">
+                <!-- <div class="col-md-6">
                   <button md-button class="btn-edit">Edit Skill</button>
-                </div>
+                </div> -->
               </div>
             </div>
           </div>
@@ -33,38 +33,24 @@
      <table class="table">
       <thead>
         <tr>
-          <th></th>
           <th>No.</th>
-          <th>Skill</th>
+          <th>Kỹ năng</th>
           <th>ID</th>
           <th>Category</th>
           <th></th>
         </tr>
       </thead>
       <tbody>
-        <tr>
-          <th scope="row">1</th>
-          <td>Mark</td>
-          <td>Otto</td>
-          <td>@mdo</td>
-          <td>@mdo</td>
-          <td><button class="btn btn-danger" type="button" name="button"><i class="fa fa-trash-o" aria-hidden="true"></i></button></td>
-        </tr>
-        <tr>
-          <th scope="row">2</th>
-          <td>Jacob</td>
-          <td>Thornton</td>
-          <td>@fat</td>
-          <td>@mdo</td>
-          <td><button class="btn btn-danger" type="button" name="button"><i class="fa fa-trash-o" aria-hidden="true"></i></button></td>
-        </tr>
-        <tr>
-          <th scope="row">3</th>
-          <td>Larry</td>
-          <td>the Bird</td>
-          <td>@twitter</td>
-          <td>@twitter</td>
-          <td><button class="btn btn-danger" type="button" name="button"><i class="fa fa-trash-o" aria-hidden="true"></i></button></td>
+        <tr *ngFor="let skill of skillList; let i =index;" >
+          <th scope="row">{{i+1}}</th>
+          <td>{{skill.name}}</td>
+          <td>{{skill.id}}</td>
+          <td></td>
+          <td>
+            <button  class="btn btn-info" type="button"  name="button"><i class="fa fa-pencil" aria-hidden="true"></i></button>
+            <button class="btn btn-danger" type="button" name="button"><i class="fa fa-trash-o" aria-hidden="true"></i></button>
+          </td>
+          <!-- <td></td> -->
         </tr>
       </tbody>
       </table>
