--- a/admin/client/src/app/user/user.component.html
+++ b/admin/client/src/app/user/user.component.html
@@ -1,29 +1,6 @@
 <div class="page">
   <div class="row">
     <div class="col-md-12">
-      <div class="card">
-        <div class="card-block">
-          <nav md-tab-nav-bar>
-            <a md-tab-link
-               [routerLink]="['/user']"
-               routerLinkActive #rla="routerLinkActive"
-               [active]="rla.isActive">
-              áds
-            </a>
-            <a md-tab-link
-               [routerLink]="['/user']"
-               routerLinkActive #rla="routerLinkActive"
-               [active]="rla.isActive">
-              asd
-            </a>
-          </nav>
-
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-md-12">
     <div class="card">
         <div class="card-block">
           <div class="row">
@@ -35,12 +12,7 @@
             </div>
             <div class="col-md-6">
               <div class="row">
-                <div class="col-md-6">
-                  <button md-button class="btn-add">Add User</button>
-                </div>
-                <div class="col-md-6">
-                  <button md-button class="btn-edit">Edit User</button>
-                </div>
+                <button md-button class="btn-add" (click)="openDialog()">Thêm người dùng</button>
               </div>
             </div>
           </div>
@@ -53,38 +25,23 @@
       <table class="table">
        <thead>
          <tr>
-           <th></th>
            <th>No.</th>
            <th>Email</th>
            <th>ID</th>
-           <th>Status</th>
+           <th>Ngày đăng ký</th>
            <th></th>
          </tr>
        </thead>
        <tbody>
-         <tr>
-           <th scope="row">1</th>
-           <td>Mark</td>
-           <td>Otto</td>
-           <td>@mdo</td>
-           <td>@mdo</td>
-           <td><button class="btn btn-danger" type="button" name="button"><i class="fa fa-trash-o" aria-hidden="true"></i></button></td>
-         </tr>
-         <tr>
-           <th scope="row">2</th>
-           <td>Jacob</td>
-           <td>Thornton</td>
-           <td>@fat</td>
-           <td>@mdo</td>
-           <td><button class="btn btn-danger" type="button" name="button"><i class="fa fa-trash-o" aria-hidden="true"></i></button></td>
-         </tr>
-         <tr>
-           <th scope="row">3</th>
-           <td>Larry</td>
-           <td>the Bird</td>
-           <td>@twitter</td>
-           <td>@twitter</td>
-           <td><button class="btn btn-danger" type="button" name="button"><i class="fa fa-trash-o" aria-hidden="true"></i></button></td>
+         <tr *ngFor="let user of userList; let i = index">
+           <th scope="row">{{i+1}}</th>
+           <td>{{user.email}}</td>
+           <td>{{user._id}}</td>
+           <td>{{user.createDate | date: 'dd/MM/yyyy'}}</td>
+           <td>
+             <button  class="btn btn-info" type="button"  name="button"><i class="fa fa-pencil" aria-hidden="true"></i></button>
+             <button class="btn btn-danger" type="button" name="button"><i class="fa fa-trash-o" aria-hidden="true"></i></button>
+           </td>
          </tr>
        </tbody>
        </table>
