--- a/admin/client/src/app/_layouts/header.component.html
+++ b/admin/client/src/app/_layouts/header.component.html
@@ -17,19 +17,26 @@
                   </a>
 
                 </li>
-                <li routerLink="/user" routerLinkActive="active">
+                <li data-toggle="collapse" data-target="#user" class="collapsed" >
                   <a >
                     <i class="fa fa-user" aria-hidden="true"></i>
                     Người dùng
                   </a>
                 </li>
-                <li routerLink="/skill" routerLinkActive="active">
+                <ul class="sub-menu" id="user">
+                  <li routerLink="/user" routerLinkActive="active">Người dùng</li>
+                  <li>Ban quản trị</li>
+                </ul>
+                <li data-toggle="collapse" data-target="#skill" class="collapsed" >
                   <a >
                   <i class="fa fa-lightbulb-o" aria-hidden="true"></i>
                    Kỹ năng
                   </a>
-
                 </li>
+                <ul class="sub-menu" id="skill">
+                  <li routerLink="/skill" routerLinkActive="active">Kỹ năng</li>
+                  <li routerLink="/category" routerLinkActive="active">Danh mục</li>
+                </ul>
                 <li routerLink="/news" routerLinkActive="active">
                   <a >
                   <i class="fa fa-newspaper-o" aria-hidden="true"></i>
