--- a/admin/client/src/app/skill/category.component.html
+++ b/admin/client/src/app/skill/category.component.html
@@ -6,13 +6,13 @@
           <div class="row">
             <div class="col-md-6" style="margin-top:10px;">
               <md-input-container>
-                <input mdInput placeholder="Search User by Email"style="width:400px;">
+                <input mdInput placeholder="Tìm danh mục theo tên"style="width:400px;">
               </md-input-container>
               <button md-mini-fab class="btn-search"><i class="material-icons">search</i></button>
             </div>
             <div class="col-md-6">
               <div class="row">
-                <button md-button class="btn-add" (click)="openAddDialog()">Thêm người dùng</button>
+                <button md-button class="btn-add" (click)="openAddDialog()">Thêm danh mục</button>
               </div>
             </div>
           </div>
@@ -26,21 +26,21 @@
        <thead>
          <tr>
            <th>No.</th>
-           <th>Email</th>
+           <th>Tên</th>
            <th>ID</th>
            <th>Ngày đăng ký</th>
            <th></th>
          </tr>
        </thead>
        <tbody>
-         <tr *ngFor="let user of userList; let i = index">
-           <th scope="row">{{i+1}}</th>
-           <td>{{user.email}}</td>
-           <td>{{user._id}}</td>
-           <td>{{user.createDate | date: 'dd/MM/yyyy'}}</td>
+         <tr >
+           <th scope="row">1</th>
+           <td></td>
+           <td></td>
+           <td></td>
            <td>
-             <button  class="btn btn-info" type="button" (click)="openEditDialog(user.email, user._id,user.profile )" name="button"><i class="fa fa-pencil" aria-hidden="true"></i></button>
-             <button class="btn btn-danger" type="button" (click)="deleteUserDialog(user.email)" name="button"><i class="fa fa-trash-o" aria-hidden="true"></i></button>
+             <button  class="btn btn-info" type="button" (click)="openEditDialog()" name="button"><i class="fa fa-pencil" aria-hidden="true"></i></button>
+             <button class="btn btn-danger" type="button" (click)="deleteCategoryDialog()" name="button"><i class="fa fa-trash-o" aria-hidden="true"></i></button>
            </td>
          </tr>
        </tbody>
