--- a/admin/client/src/app/skill/skill.component.html
+++ b/admin/client/src/app/skill/skill.component.html
@@ -16,11 +16,8 @@
             <div class="col-md-6">
               <div class="row">
                 <div class="col-md-12">
-                  <button md-button class="btn-add" (click)="openDialog()">Thêm Kỹ Năng</button>
+                  <button md-button class="btn-add" (click)="openAddDialog()">Thêm Kỹ Năng</button>
                 </div>
-                <!-- <div class="col-md-6">
-                  <button md-button class="btn-edit">Edit Skill</button>
-                </div> -->
               </div>
             </div>
           </div>
@@ -47,10 +44,9 @@
           <td>{{skill.id}}</td>
           <td></td>
           <td>
-            <button  class="btn btn-info" type="button"  name="button"><i class="fa fa-pencil" aria-hidden="true"></i></button>
-            <button class="btn btn-danger" type="button" name="button"><i class="fa fa-trash-o" aria-hidden="true"></i></button>
+            <button  class="btn btn-info" type="button" (click)="openEditDialog(skill.name,skill.id)" name="button"><i class="fa fa-pencil" aria-hidden="true"></i></button>
+            <button class="btn btn-danger" type="button" (click)="deleteSkillDialog(skill.name)" name="button"><i class="fa fa-trash-o" aria-hidden="true"></i></button>
           </td>
-          <!-- <td></td> -->
         </tr>
       </tbody>
       </table>
