--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -41,22 +41,22 @@
     </div>
     <br>
       <div class="row">
-        <div class="col-md-8 offset-md-1 offset-xs-3" style="border:solid; border-width:0 1px 0 0; border-color:#DDD;background-color:white;" >
+        <div class="col-md-8 offset-md-1 offset-xs-3 page-panel"  >
           <div class="flex-container-column" style="margin-top:20px;">
             <div class="flex-news-header" >
               <!-- hot news -->
               <div class="col-md-5">
-                <img src="../images/hotnews.jpg" alt="hot-news" class="img-rounded img-fluid" style="width:100%;height:100%;">
+                <img src="../images/hotnews.jpg" alt="hot-news" class="img-rounded img-fluid">
               </div>
               <div class="col-md-7" style="  border:solid;border-width:0 0 1px 0;border-color:#DDD;">
                 <div class="flex-container-column">
                   <div class="flex-news-header-title">
-                      <h3>Top 10 Employability Skills</h3>
+                      <h3>10 kỹ năng bạn cần có trong cuộc sống</h3>
                   </div>
                   <div class="flex-news-header-content">
-                    <p>Communication skills — Listening, speaking and writing. Employers want people who can accurately
-                        interpret what others are saying and organize and express their thoughts clearly.
-                        <a href="#seemore" style="color:#4eb1ba">Xem thêm...</a></p>
+                    <p>Cuộc sống hiện đại đòi hỏi mỗi cá nhân không ngừng cập nhật thông tin và hoàn thiện giá trị của mình để tồn tại và phát triển,
+                    bất kỳ ai cũng phải tự trang bị cho bản thân  những kỹ năng cần thiết.
+                          <a class="nav-link" routerLink="/news1" routerLinkActive="active">Xem thêm...</a></p>
                   </div>
                 </div>
               </div>
@@ -66,22 +66,22 @@
                 <div class="col-md-4">
                     <img src="../images/news1.jpg" alt="news1" class="img-fluid">
                     <div class="flex-news-children-title">
-                      <b>Christopher Gray on How to Be a Social Entrepreneur</b>
-                      <a href="#seemore" style="color:#4eb1ba">Xem thêm...</a>
+                      <p><b>4 kỹ năng "sống còn"của sinh viên ngành kỹ thuật</b>
+                      <a class="nav-link" routerLink="/news2" routerLinkActive="active">Xem thêm...</a></p>
                     </div>
                 </div>
                 <div class="col-md-4">
                   <img src="../images/news2.jpg" alt="news1" class="img-fluid">
                   <div class="flex-news-children-title">
-                    <b>One Man’s Journey From Prison to College</b>
-                    <a href="#seemore" style="color:#4eb1ba">Xem thêm...</a>
+                    <p><b>Top 10 website tốt nhất để tìm bạn nước ngoài học tiếng Anh và trao đổi ngôn ngữ</b>
+                      <a class="nav-link" routerLink="/news3" routerLinkActive="active">Xem thêm...</a></p>
                   </div>
                 </div>
                 <div class="col-md-4">
                   <img src="../images/news3.jpg" alt="news1" class="img-fluid">
                   <div class="flex-news-children-title">
-                    <b>The Innovation Campus: Building Better Ideas</b>
-                    <a href="#seemore" style="color:#4eb1ba">Xem thêm...</a>
+                    <p><b>Top 10 swap websites</b>
+                    <a class="nav-link" routerLink="/news4" routerLinkActive="active">Xem thêm...</a></p>
                   </div>
                 </div>
 
