--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -28,7 +28,7 @@
   <!-- Button trigger modal -->
 
   <!-- Modal -->
-  <div class="modal" id="CreateProfileModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal" id="CreateProfileModal" tabindex="-1" data-backdrop="static" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content" style="padding:20px;">
         <h1 style="text-align: center;">Chào mừng bạn đến với Swappal</h1>
