--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -22,6 +22,42 @@ input[type=date]{
   margin-left: 5px;
   height: 40px!important;
 }
+
+/*#sidebar{
+  position: fixed;
+  right: 0;
+}*/
+.page-panel{
+  border:solid; border-width:0 1px 0 0; border-color:#DDD;background-color:white;
+}
+.widget-title {
+    background-color: lightgrey;
+    text-align: center;
+    padding: 8px;
+    font-size:20px;
+    font-family: sans-serif;
+    letter-spacing: 1px;
+    letter-spacing: 0.1rem;
+
+  }
+  #sidebar{
+    right: 0;
+    position: fixed;
+  }
+.news-title{
+  margin-top: 20px;
+}
+.linktitle{
+  font-size:16px;
+  font-family:sans-serif;
+}
+.contentnews1{
+  width: 100%;
+  height: 190px;
+  margin-top: 10px;
+  margin-bottom:  20px;
+  /*text-align:justify;*/
+}
 .searchBar{
   position:absolute;
   top:60%;
@@ -33,20 +69,7 @@ input[type=date]{
 .margin-layout{
   margin-bottom: 3%;
 }
-/*section.btn-social-facebook button{
-  display: inline-block;
-  margin: 0 10px 0 0;
-  padding: 5px 5px;
-  font-size: 20px;
-  appearance: none;
-  box-shadow: none;
-  border-radius: 0;
-  color: #fff;
-  background-color: #6496c8;
-  text-shadow: -1px 1px #417cb8;
-  border: none;
-  width: 250px;
-}*/
+
 .btn-social-facebook{
   background: url('../images/facebook-btn.png') no-repeat;
   background-size: cover;
@@ -66,7 +89,7 @@ input[type=date]{
   height: 40px;
 }
 html, body {
-
+    background-color: #ebf5f3;
     height:100%;
 }
 
@@ -113,229 +136,6 @@ header{
   text-align: center;
 }
 
-/*#noti_Container {
-        position:relative;
-    }
-#noti_Button {
-        line-height:22px;
-        border-radius:50%;
-        -moz-border-radius:50%;
-        -webkit-border-radius:50%;
-        margin:13px 10px 0 10px;
-        cursor:pointer;
-    }
-
-
-    #noti_Counter {
-        display:block;
-        position:absolute;
-        background:#E1141E;
-        color:#FFF;
-        font-size:12px;
-        font-weight:normal;
-        padding:1px 3px;
-        margin:-8px 0 0 25px;
-        border-radius:2px;
-        -moz-border-radius:2px;
-        -webkit-border-radius:2px;
-        z-index:1;
-    }
-
-
-   #notifications {
-       display:none;
-       height: 300px;
-       width:430px;
-       position:absolute;
-       top:30px;
-       right:0;
-       background:#FFF;
-       border:solid 1px rgba(100, 100, 100, .20);
-       -webkit-box-shadow:0 3px 8px rgba(0, 0, 0, .20);
-       z-index: 1;
-       min-width:300px;
-       overflow-y: auto;
-   }
-
-   #notifications:before {
-       content: '';
-       display:block;
-       width:0;
-       height:0;
-       color:transparent;
-       border:10px solid #CCC;
-       border-color:transparent transparent #FFF;
-       margin-top:-20px;
-       margin-left:400px;
-   }
-   div.scroll {
-    overflow:auto;
-}
-#panel, #flip {
-    padding: 5px;
-    text-align: left;
-    background-color: #f7f7f7;
-    border: solid 1px #f7f7f7;
-}
-
-
-#panel {
-    padding: 20px;
-    display: none;
-}
-
-#panel2, #flip2 {
-    padding: 5px;
-    text-align: left;
-    background-color: #f7f7f7;
-    border: solid 1px #f7f7f7;
-}
-
-
-#panel2 {
-    padding: 20px;
-    display: none;
-}
-
-#panel3, #flip3 {
-    padding: 5px;
-    text-align: left;
-    background-color: #f7f7f7;
-    border: solid 1px #f7f7f7;
-}
-
-
-#panel3 {
-    padding: 20px;
-    display: none;
-}*/
-.faqstitle{
-  color: #555555;
-}
-/*body{
-  position: relative;
-}
-.footer-css{
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  left: 0;
-}*/
-/* Extra styles for the cancel button */
-
-.signupbuttonmain{
-  width:auto;
-  margin:2;
-  float:right;
-
-}
-
-.container-main{
-  margin:20px;
-  height:800px;
-}
-/*.coverSlides{
-  display: none;
-}*/
-.card.horizontal {
-        display: -webkit-flex;
-        display: -ms-flexbox;
-        display: flex;
-    }
-.loginbuttonmain{
-  marign:0;
-  float: right;
-}
-.mdl-grid {
-    max-width: 600px;
-}
-.mdl-card__media {
-    margin: 0;
-}
-.mdl-card__media > img {
-    max-width: 100%;
-}
-.mdl-card__actions {
-    display: flex;
-    box-sizing:border-box;
-    align-items: center;
-}
-.mdl-card__actions > .mdl-button--icon {
-    margin-right: 3px;
-    margin-left: 3px;
-}
-.containerform .loginbtn{
-  background-color: grey;
-  color: white;
-  border: none;
-  padding: 14px 20px;
-  margin: 8px 0;
-  width: 100%;
-}
-.social {
-    width: 370px;
-    float: none;
-    margin: 0 auto;
-}
-.containerform .signupbtn{
-  background-color: grey;
-  color: white;
-  border: none;
-  padding: 14px 20px;
-  margin: 8px 0;
-  width: 100%;
-}
-.cancelbtn {
-
-  width: auto;
-  padding: 10px 18px;
-  background-color: #f44336;
-
-}
-.facebookbtn{
-  width: auto;
-  padding: 10px 18px;
-  border: none;
-  background-color: #1d76e3;
-  color: white;
-}
-.checkboxterm{
-
-  width: auto;
-  float:left;
-}
-
-.containerform {
-    padding: 16px;
-}
-
-span.psw {
-    float: right;
-    padding-top: 16px;
-}
-
-/* The Modal (background) */
-/*.modal {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgb(0,0,0);
-    background-color: rgba(0,0,0,0.4);
-    padding-top: 60px;
-}*/
-
-/* Modal Content/Box */
-/*.modal-content {
-    background-color: #fefefe;
-    margin: 5% auto 15% auto;
-    border: 1px solid #888;
-    width: 30%;
-}*/
 
 /* The Close Button (x) */
 .close {
@@ -387,7 +187,7 @@ span.psw {
 }
 .flex-news-header{
   width: 95%;
-  height: 310px;
+  height: 250px;
   display: flex;
 }
 .flex-news-header-title{
