--- a/client/src/app/profile/profile.component.html
+++ b/client/src/app/profile/profile.component.html
@@ -1,4 +1,4 @@
-<div class="web-background-color">
+
   <div class="container">
     <div class="card">
       <div class="card-block">
@@ -21,13 +21,29 @@
       </div>
     </div>
     <!-- swap me button -->
-    <div class="row">
-      <div class="col-md-8">
+    <div class="row" *ngIf="!isRequest && !isProgress">
+        <div class="col-md-8">
+        </div>
+        <div  class="col-md-4 md-dialog-container div-swapme-button" id="Mydialogcontaine">
+          <button md-button type="button" [hidden]=displayButton data-toggle="modal" data-target="#SwapModal" class="swapme-button">TRAO ĐỔI!</button>
+        </div>
+    </div>
+    <!-- notice button -->
+    <div class="row" *ngIf="isProgress==false && isRequest">
+      <div class="col-md-6">
       </div>
-      <div  class="col-md-4 md-dialog-container div-swapme-button" id="Mydialogcontaine" >
-        <button md-button type="button" [hidden]=displayButton data-toggle="modal" data-target="#SwapModal" class="swapme-button">TRAO ĐỔI!</button>
+      <div class="col-md-6 div-swapme-button">
+        <button md-button type="button" [hidden]=displayButton class="swapme-button" disabled="true">BẠN ĐANG GỬI YÊU CẦU</button>
       </div>
-      <!-- swap request modal -->
+    </div>
+    <!-- finish button -->
+    <div class="row" *ngIf="isProgress == true">
+      <div class="col-md-7">
+      </div>
+      <div class="col-md-5 div-swapme-button">
+        <button md-button type="button" [hidden]=displayButton class="swapme-button" data-toggle="modal" data-target="#WriteReviewModal">HOÀN TẤT TRAO ĐỔI</button>
+      </div>
+    </div>
       <div class="modal fade" id="SwapModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
           <div class="modal-content" style="padding:20px;">
@@ -76,7 +92,7 @@
           </div>
         </div>
       </div>
-    </div>
+
       <!-- Nav tabs -->
         <div style="margin-bottom:40px;margin-top:20px">
           <ul class="nav nav-tabs" role="tablist">
@@ -359,23 +375,22 @@
                   <div style="text-align:center;" >
                     <h1>ĐÁNH GIÁ</h1>
                   </div>
-                  <form>
+                  <form #rating="ngForm" (ngSubmit)="writeReview(rating)">
+
+
                     <label>Kỹ năng</label>
-                    <rating [max]="5" required></rating>
+                    <rating ngModel name="ratesk" [max]="5" required></rating>
                     <br>
                     <label>Dịch vụ</label>
-                    <rating [max]="5" required></rating>
+                    <rating ngModel name="ratesv" [max]="5" required></rating>
                     <input type="text" class="form-control"style="height:120px;" name="review" ngModel>
                     <div style="text-align:center;">
-                      <button type="submit" class="btn-info btn">Xác nhận</button>
+                      <button type="submit" (click)="writeReview(rating)" class="btn-info btn">Xác nhận</button>
                     </div>
-
-                  </form>
-
+                    </form>
                 </div>
               </div>
             </div>
         </div>
       </div>
   </div>
-</div>
