Edit request swap, api

--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -20,7 +20,11 @@
                       value-property-name="id"
                       display-property-name="name"
                       placeholder="Chọn kỹ năng cần tìm"
-                      class="form-control search-skill"ß>
+                      class="form-control search-skill">
+                      <!-- <md-select multiple [(ngModel)]="demo" name="demo" laceholder="Pick">
+                        <md-option value="{{animal}}" *ngFor="let animal of animals" >{{animal}}</md-option>
+                      </md-select>
+                      {{demo}} -->
                       <!-- <p>{{idskillneed.value.id}}</p> -->
               <button type="submit" class="btn btn-default"
               style="margin-left:5px; width:60px; height:40px;color:#222930;background-color:white;border-radius:50px;"
