--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -50,12 +50,14 @@
             </div>
             <hr>
             <label for="InputHelpOther1"><p class="glyphicon glyphicon-user"></p> Mọi người liên lạc với bạn </label>
-            <!-- <input type="email" class="form-control" id="InputHelpOther1" placeholder="What's your email address?"> -->
             <p name="email">{{email}}</p>
             <input type="input" name="location" ngModel class="form-control input-text-margin" id="InputHelpOther1" placeholder="Vị trí của bạn để có thể tìm người trao đổi">
             <hr>
             <label for="InputHelpOther2"><p class="glyphicon glyphicon-user"></p> Hãy giúp mọi người biết thêm về bạn</label>
-            <input type="input" name="skillhave" class="form-control input-text-margin" id="InputHelpOther2" placeholder="You're expert in">
+            <md-select multiple=true placeholder="Pick">
+              <md-option value="1">One</md-option>
+              <md-option value="2">Two</md-option>
+            </md-select>
             <input type="input" name="skillneed" class="form-control input-text-margin" id="InputHelpOther2" placeholder="You want to learn more">
             <input type="input" name="mission" ngModel class="form-control input-text-margin" id="InputHelpOther2" placeholder="Bạn đến đây vì">
             <input type="input" name="achievement" ngModel class="form-control input-text-margin" id="InputHelpOther2" placeholder="Nhưng gì bạn có được khi trao đổi">
