--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -288,6 +288,11 @@ header{
   font-family:sans-serif;
   float: right;
 }
+.div-swapme-button .notice-swap{
+  font-size: 30px;
+  width: 100%;
+  height: 80px;
+}
 .p-name-profile{
   font-size: 20px;
 }
