--- a/admin/client/src/app/skill/skill.component.html
+++ b/admin/client/src/app/skill/skill.component.html
@@ -6,10 +6,15 @@
           <div class="row">
             <div class="col-md-6" style="margin-top:10px;">
               <md-input-container>
-                <input mdInput placeholder="Search Skill"style="width:200px;">
+                  <input mdInput placeholder="Skill" [mdAutocomplete]="auto" [formControl]="skillCtrl">
               </md-input-container>
-              <md-select placeholder="Skill Category" style="width:200px;">
-                 <md-option *ngFor="let cate of cateList">{{cate.name}}</md-option>
+              <md-autocomplete #auto="mdAutocomplete" >
+                <md-option *ngFor="let skill of skillListbyCate[catePosition]">
+                  {{skill.name}}
+                </md-option>
+              </md-autocomplete>
+              <md-select placeholder="Skill Category" [(ngModel)]="catePosition" name="cate"style="width:200px;">
+                 <md-option [value]="i" *ngFor="let cate of cateList; let i = index;">{{cate.name}}</md-option>
               </md-select>
               <button md-mini-fab class="btn-search"><i class="material-icons">search</i></button>
             </div>
