--- a/admin/client/src/app/skill/skillDialog.component.html
+++ b/admin/client/src/app/skill/skillDialog.component.html
@@ -27,20 +27,20 @@
   <div class="modal-title">
     <h2>SỬA KỸ NĂNG</h2>
   </div>
-  <form>
+  <form #skill="ngForm" (ngSubmit)="editSkill(skill)">
     <div class="row">
       <md-input-container class="input-width">
-        <input mdInput placeholder="{{skill}}">
+        <input mdInput name="name" ngModel="{{skillName}}">
       </md-input-container>
     </div>
     <div class="row">
-      <md-select placeholder="{{category}}" class="input-width">
-         <md-option>hello</md-option>
+      <md-select ngModel name="newcatid" placeholder="{{skillid}}" class="input-width">
+         <md-option value="{{cate._id}}" *ngFor="let cate of cateList">{{cate.name}}</md-option>
       </md-select>
     </div>
     <div class="row">
       <div class="col-md-6">
-        <button type="button" class="btn btn-add" name="button">Thêm</button>
+        <button type="submit" class="btn btn-add" name="button">Sửa</button>
       </div>
       <div class="col-md-6">
         <button md-dialog-close type="button" class="btn btn-cancel" name="button">Huỷ</button>
