update create profile dialog

--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -13,6 +13,7 @@
                      display-property-name="name"
                      placeholder="Chọn kĩ năng bạn có"
                      class="form-control search-skill">
+              <!-- <input type="text" name="" value=""> -->
               <input  ng2-auto-complete
                       [source]="skills"
                       [formControl]="idskillhave"
@@ -37,8 +38,8 @@
   </div>
   <div style="margin-top:10px;">
     <div class="row">
-      <div class="col-md-10 offset-md-1 offset-xs-1" style=" background-color:#f7fade;padding:10px;">
-        <p style="margin-top:10px; z-index:0;" >
+      <div class="col-md-10 offset-md-1 offset-xs-1" style=" background-color:#f7fade;padding:10px;z-index=0;">
+        <p style="margin-top:10px;" >
           <b>Người dùng đánh giá</b><br><var>Đây là một website rất tốt</var>
         </p>
       </div>
