--- a/client/src/app/profile/profile.component.html
+++ b/client/src/app/profile/profile.component.html
@@ -360,18 +360,14 @@
                             đánh giá
                           </div>
                           <div class="col-3"style="text-align:right;">
-                            point
+                            điểm
                           </div>
                         </div>
                         <div class="review-description">
-                          "description"
+                          bình luận
                         </div>
                       </div>
                     </div>
-                  </div>
-                  <!-- [hidden]="displayButton" -->
-                  <div style="width:100%;text-align:center;" >
-                    <button type="submit" class="btn btn-info" data-toggle="modal" data-target="#WriteReviewModal">Viết Đánh Giá</button>
                   </div>
                 </div>
                 <div class="col-2" style="width:180px; height:180px;">
