--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -13,6 +13,7 @@ input[type=date]{
   box-sizing: border-box;
 
 }
+
 .noti-style{
   overflow-y: auto;
 }
@@ -21,26 +22,9 @@ input[type=date]{
   width: 250px!important;
   margin-left: 5px;
   height: 40px!important;
+  z-index:1!important;
 }
-my-app:empty + .loading {
-    opacity: 1;
-    z-index: 100;
-}
-.loading {
-    opacity: 0;
-    transition: opacity .8s ease-in-out;
-    position: fixed;
-    height: 100%;
-    width: 100%;
-    top: 0;
-    left: 0;
-    background: #000;
-    z-index: -1;
-}
-/*#sidebar{
-  position: fixed;
-  right: 0;
-}*/
+
 .page-panel{
   border:solid; border-width:0 1px 0 0; border-color:#DDD;background-color:white;
 }
