--- a/admin/client/src/app/home/home.component.html
+++ b/admin/client/src/app/home/home.component.html
@@ -3,25 +3,25 @@
       <div class="row">
         <div class="col-md-3 dashboard-title">
           <div class="dashboard-item" style="background-color:#ef6863;">
-            <p class="dashboard-number">64</p>
+            <p class="dashboard-number">{{userList.length}}</p>
             <p class="dashboard-item-info">USER</p>
           </div>
         </div>
         <div class="col-md-3 dashboard-title">
           <div class="dashboard-item" style="background-color:#22beef;">
-            <p class="dashboard-number">64</p>
+            <p class="dashboard-number"></p>
             <p class="dashboard-item-info">REQUEST</p>
           </div>
         </div>
         <div class="col-md-3 dashboard-title">
           <div class="dashboard-item" style="background-color:#a2d200;">
-            <p class="dashboard-number">64</p>
+            <p class="dashboard-number">{{skillList.length}}</p>
             <p class="dashboard-item-info">SKILL</p>
           </div>
         </div>
         <div class="col-md-3 dashboard-title">
           <div class="dashboard-item" style="background-color:#d0a8e0;">
-            <p class="dashboard-number">64</p>
+            <p class="dashboard-number"></p>
             <p class="dashboard-item-info">FEEDBACK</p>
           </div>
         </div>
