--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -29,7 +29,7 @@
                       <!-- <p>{{idskillneed.value.id}}</p> -->
               <button type="submit" class="btn btn-default"
               style="margin-left:5px; width:60px; height:40px;color:#222930;background-color:white;border-radius:50px;"
-              routerLink="/search" [queryParams]="{have: idskillhave.value.id,need:idskillneed.value.id}" routerLinkActive="active">
+              routerLink="/search" [queryParams]="{have: idskillhave.value._id,need:idskillneed.value._id}" routerLinkActive="active">
                 <i class="material-icons">search</i>
               </button>
           </div>
