--- a/client/src/app/login/createProfileDialog.component.html
+++ b/client/src/app/login/createProfileDialog.component.html
@@ -1,5 +1,6 @@
 <div >
   <h1 style="text-align: center;">Chào mừng bạn đến với Swappal</h1>
+  <alert></alert>
     <!-- Tell us -->
     <form #a="ngForm" (ngSubmit)="onCreateProfile(a)">
       <label for="InputTellUs"><p class="glyphicon glyphicon-user"></p> Hãy nói cho chúng tôi biết một chút về bạn</label>
@@ -22,32 +23,56 @@
       <input type="input" name="location" ngModel class="form-control input-text-margin" id="InputHelpOther1" placeholder="Vị trí của bạn để có thể tìm người trao đổi">
       <hr>
       <label for="InputHelpOther2"><p class="glyphicon glyphicon-user"></p> Hãy giúp mọi người biết thêm về bạn</label>
-      <div>
-        <md-input-container>
-            <input mdInput placeholder="Kỹ năng bạn có" [mdAutocomplete]="auto" [formControl]="skillHave">
-        </md-input-container>
-        <md-autocomplete #auto="mdAutocomplete">
-          <md-option *ngFor="let skill of skillListbyCate[catePosition]">
-            {{skill.name}}
-          </md-option>
-        </md-autocomplete>
-        <md-select placeholder="Lĩnh vực" [(ngModel)]="catePosition" [ngModelOptions]="{standalone: true}">
-           <md-option [value]="i" *ngFor="let cate of cateList; let i = index;">{{cate.name}}</md-option>
-        </md-select>
-      </div>
-      <div>
-        <md-input-container>
-            <input mdInput placeholder="Kỹ năng bạn cần" [mdAutocomplete]="auto" [formControl]="skillNeed">
-        </md-input-container>
-        <md-autocomplete #auto="mdAutocomplete" >
-          <md-option *ngFor="let skill of skillListbyCate[catePosition]">
-            {{skill.name}}
-          </md-option>
-        </md-autocomplete>
-        <md-select placeholder="Lĩnh vực" [(ngModel)]="catePosition" [ngModelOptions]="{standalone: true}">
-           <md-option [value]="i" *ngFor="let cate of cateList; let i = index;">{{cate.name}}</md-option>
-        </md-select>
-      </div>
+      <hr>
+        <label >Kỹ năng bạn có</label>
+
+          <div>
+            <!-- auto complete need -->
+            <div *ngIf="needArrObj">
+              <ul>
+                <li *ngFor="let need of needArrObj">{{need.name}}</li>
+              </ul>
+            </div>
+            <form #need="ngForm" (ngSubmit)="addNeedtoArray(need)">
+              <md-input-container>
+                  <input mdInput placeholder="Kỹ năng bạn cần" [mdAutocomplete]="auton" name="need" ngModel >
+              </md-input-container>
+              <md-autocomplete #auton="mdAutocomplete">
+                <md-option *ngFor="let skillNeed of skillListbyCate[cateNeedPosition]" [value]="skillNeed.name">
+                  {{skillNeed.name}}
+                </md-option>
+              </md-autocomplete>
+              <md-select placeholder="Lĩnh vực" [(ngModel)]="cateNeedPosition" [ngModelOptions]="{standalone: true}">
+                 <md-option [value]="i" *ngFor="let cate of cateList; let i = index;">{{cate.name}}</md-option>
+              </md-select>
+              <button md-button type="submit" name="button">Thêm</button>
+            </form>
+          </div>
+
+          <label >Kỹ năng bạn cần</label>
+          <div *ngIf="haveArrObj">
+            <ul>
+              <li *ngFor="let have of haveArrObj">{{have.name}}</li>
+            </ul>
+          </div>
+          <form #have="ngForm" (ngSubmit)="addHavetoArray(have)">
+            <div>
+              <md-input-container>
+                  <input mdInput placeholder="Kỹ năng bạn có" ngModel name="have"[mdAutocomplete]="autoh" >
+              </md-input-container>
+              <md-autocomplete #autoh="mdAutocomplete">
+                <md-option *ngFor="let skillHave of skillListbyCate[cateHavePosition]" [value]="skillHave.name">
+                  {{skillHave.name}}
+                </md-option>
+              </md-autocomplete>
+              <md-select placeholder="Lĩnh vực" [(ngModel)]="cateHavePosition" [ngModelOptions]="{standalone: true}">
+                 <md-option [value]="i" *ngFor="let cate of cateList; let i = index;">{{cate.name}}</md-option>
+              </md-select>
+              <button md-button type="submit" name="button">Thêm</button>
+            </div>
+          </form>
+
+        <!-- auto complete have -->
 
       <input type="input" name="mission" ngModel class="form-control input-text-margin" id="InputHelpOther2" placeholder="Bạn đến đây vì">
       <input type="input" name="achievement" ngModel class="form-control input-text-margin" id="InputHelpOther2" placeholder="Nhưng gì bạn có được khi trao đổi">
